--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,54 @@
-name: Android CI
+name: Build Android App
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master  # Trigger on pushes to the main branch
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master  # Trigger on pull requests to the main branch
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: Build APK
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+      # Step 1: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      # Step 2: Set up JDK
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'  # Use Azul Zulu JDK
+          java-version: '17'    # Specify Java version compatible with your project (e.g., 17)
+
+      # Step 3: Cache Gradle dependencies
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
+
+      # Step 4: Set up Android SDK
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 35                 # Target API level (update based on your app's build.gradle)
+
+      # Step 5: Build the project
+      - name: Build with Gradle
+        run: ./gradlew assembleRelease  # Replace with your build task (e.g., assembleDebug for debug builds)
+
+      # Step 6: Upload APK or AAB artifact
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release.apk
+          path: app/build/outputs/apk/release/*.apk  # Adjust path for your build type (APK or AAB)
