--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,18 +16,18 @@ jobs:
     steps:
       # Step 1: Checkout code
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Latest stable version
 
       # Step 2: Set up JDK
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4  # Latest version
         with:
           distribution: 'zulu'  # Use Azul Zulu JDK
-          java-version: '17'    # Specify Java version compatible with your project (e.g., 17)
+          java-version: '21'    # Specify Java version compatible with your project
 
       # Step 3: Cache Gradle dependencies
       - name: Cache Gradle dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4  # Latest version
         with:
           path: |
             ~/.gradle/caches
@@ -38,7 +38,7 @@ jobs:
 
       # Step 4: Set up Android SDK
       - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3  # Latest version
         with:
           api-level: 35                 # Target API level (update based on your app's build.gradle)
 
@@ -48,7 +48,7 @@ jobs:
 
       # Step 6: Upload APK or AAB artifact
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Latest version
         with:
           name: app-release.apk
           path: app/build/outputs/apk/release/*.apk  # Adjust path for your build type (APK or AAB)
