--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,57 +1,54 @@
-name: Build Android App
+name: Android CI
 
 on:
   push:
     branches:
-      - master  # Trigger on pushes to the main branch
+      - main
   pull_request:
     branches:
-      - master  # Trigger on pull requests to the main branch
+      - main
 
 jobs:
-  build:
-    name: Build APK
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+  build_apk:
+    name: Build Apk
+    runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
-      # Step 2: Set up JDK
-      - name: Set up JDK
-        uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: '21'
+          token: ${{ github.token }}
 
-      # Step 3: Cache Gradle dependencies
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-${{ runner.os }}-
+            ~/.android/build-cache
+            ~/.m2/repository
+          key: ${{ runner.os }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/**/*.kt') }}
 
-      # Step 4: Set up Android SDK (without api-level)
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 21
+
       - name: Set up Android SDK
-        uses: android-actions/setup-android@v3  # No 'api-level' input needed
+        uses: android-actions/setup-android@v3
+        with:
+          sdk-version: '35'
 
-      # Step 5: Install Android SDK API 35 manually
-      - name: Install Android SDK API 35
-        run: |
-          sdkmanager "platforms;android-35" "build-tools;34.0.0"
+      - name: Change Gradle wrapper permissions
+        run: chmod +x ./gradlew
 
-      # Step 6: Build the project
-      - name: Build with Gradle
-        run: ./gradlew assembleRelease
+      - name: Build Debug Apk
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: ./gradlew assembleDebug -Dorg.gradle.parallel=true -Dorg.gradle.daemon=true
 
-      # Step 7: Upload APK or AAB artifact
-      - name: Upload APK
+      - name: Upload Debug
         uses: actions/upload-artifact@v4
         with:
-          name: app-release.apk
-          path: app/build/outputs/apk/release/*.apk
+          name: debug-${{ github.run_number }}
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 10
