--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlinCoroutines = "1.10.1"
 gson = "2.12.1"
 ksp = "2.1.10-1.0.29"
 slidingPaneLayout = "1.2.0"
+glide = "4.16.0"
 
 
 [libraries]
@@ -34,6 +35,7 @@ kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", versio
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 symbol-processing-api = { group = "com.google.devtools.ksp", name = "symbol-processing-api", version.ref = "ksp" }
 sliding-pane-layout = { group = "androidx.slidingpanelayout", name = "slidingpanelayout", version.ref = "slidingPaneLayout" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
