--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,64 +14,53 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository (Shallow Clone)
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1  # Faster Git checkout
+          fetch-depth: 1  # Speeds up checkout
 
-      - name: Cache Gradle, C++ & Build Files
+      - name: Cache Gradle & Build Files
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
             ~/.android/build-cache
-            ~/.m2/repository
             .cxx  # C++ build cache
           key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
 
-      - name: Set up JDK 21 (Latest)
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: 21
 
-      - name: Set up Android SDK (Latest)
+      - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
           sdk-version: '35'
 
-      - name: Set up Pre-installed NDK (No Download)
+      - name: Set up Pre-installed NDK (Fastest Method)
         run: |
           export ANDROID_NDK_HOME=$ANDROID_HOME/ndk/25.2.9519653
           echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
           echo "ANDROID_NDK=$ANDROID_NDK_HOME" >> $GITHUB_ENV
           echo "PATH=$ANDROID_NDK_HOME:$PATH" >> $GITHUB_ENV
 
-      - name: Move Gradle & Build Files to RAM Disk (Faster Builds)
-        run: |
-          echo "Moving Gradle cache and build files to RAM disk (/dev/shm/)"
-          mkdir -p /dev/shm/gradle-cache
-          mkdir -p /dev/shm/build-cache
-          mv ~/.gradle /dev/shm/gradle-cache
-          mv .cxx /dev/shm/build-cache
-          ln -s /dev/shm/gradle-cache ~/.gradle
-          ln -s /dev/shm/build-cache .cxx
-
       - name: Grant Execute Permission for Gradle Wrapper
         run: chmod +x ./gradlew
 
-      - name: Build Native C++ Code (Optimized with Ninja)
-        run: ./gradlew :app:externalNativeBuildDebug --parallel --no-daemon --build-cache --max-workers=2 --configuration-cache
+      - name: Build C++ Code (NDK)
+        run: ./gradlew :app:externalNativeBuildDebug --parallel --no-daemon --build-cache --configuration-cache
         env:
           CXXFLAGS: "-O3 -flto=thin -march=native"
           CC: "clang"
           CXX: "clang++"
           CMAKE_GENERATOR: "Ninja"
 
-      - name: Build Debug APK (Extreme Speed)
+      - name: Build Debug APK
         if: ${{ github.ref == 'refs/heads/master' }}
-        run: ./gradlew assembleDebug --parallel --no-daemon --build-cache --configuration-cache --max-workers=2
+        run: ./gradlew assembleDebug --parallel --no-daemon --build-cache --configuration-cache
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
