--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -8,16 +8,6 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(xmlParser
-        SHARED
-        ${CMAKE_CURRENT_SOURCE_DIR}/xmlParser.cpp
-)
-
-target_include_directories(xmlParser
-        PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/libs/rapidjson/include
-)
-
 FetchContent_Declare(
         expat
         GIT_REPOSITORY https://github.com/libexpat/libexpat.git
@@ -27,6 +17,15 @@ FetchContent_Declare(
 
 # Download and configure Expat.
 FetchContent_MakeAvailable(expat)
+
+FetchContent_Declare(
+        rapidjson
+        GIT_REPOSITORY https://github.com/Tencent/rapidjson.git
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(rapidjson)
+
+target_include_directories(xmlParser PRIVATE ${rapidjson_SOURCE_DIR}/include)
 
 find_library(log-lib log)
 
