--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,8 @@ on:
       - master
   workflow_dispatch:
 
-# Use concurrency to ensure that if a new run is triggered while one is in progress, the previous one is canceled.
+# Use concurrency to ensure that if a new run is triggered while one is in progress,
+# the previous one is canceled.
 concurrency:
   group: android-build
   cancel-in-progress: true
@@ -24,7 +25,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Java (JDK 17) needed for Android builds.
+      # Step 2: Set up Java (Temurin JDK 21) for Android builds.
       - name: Set up Java (Temurin JDK 21)
         uses: actions/setup-java@v4
         with:
@@ -49,13 +50,14 @@ jobs:
           build-tools: latest
           ndk-version: latest
 
-      # Step 5: Build the Android project.
-      #         --parallel flag enables parallel processing for faster builds.
+      # Step 5: Build the Android project with additional flags for faster builds.
+      #         --parallel runs tasks in parallel.
+      #         --build-cache reuses outputs from previous builds.
+      #         --configure-on-demand configures only required projects.
       - name: Build Android Project
-        run: ./gradlew assembleDebug --parallel
+        run: ./gradlew assembleDebug --parallel --build-cache --configure-on-demand
 
-      # Step 6: Upload the built APKs as artifacts.
-      #         retention-days is set to 10 so that the artifacts are removed after 10 days.
+      # Step 6: Upload the built APKs as artifacts with a retention period of 10 days.
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
