--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,7 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
+
+GITHUB_USER=A0ks9
+GITHUB_TOKEN=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
+
