--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,5 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
 
-GITHUB_USER=A0ks9
-GITHUB_TOKEN=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
-
+gradle.publish.key=JUFyN8ClyDwPBNkQ5k3Xe9U9xy5adQe5
+gradle.publish.secret=Vvp9T5rHpeieQM2giEDGuAbG7FKK4kID
