--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,27 +9,35 @@ on:
       - master
   workflow_dispatch:
 
+# Optimize concurrency to prevent redundant builds
 concurrency:
-  group: android-build
+  group: android-build-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 15  # Add timeout to prevent hanging builds
 
     steps:
-      # Step 1: Checkout the repository code.
+      # Step 1: Checkout with optimized settings
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for faster checkout
+          submodules: false  # Disable submodules if not needed
 
-      # Step 2: Set up Java (Temurin JDK 21) for Android builds.
+      # Step 2: Set up Java with optimized settings
       - name: Set up Java (Temurin JDK 21)
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
+          cache: 'gradle'  # Enable built-in Gradle caching
+          java-package: 'jdk'  # Only download JDK without JRE
+          architecture: 'x64'  # Specify architecture for faster download
 
-      # Step 3: Cache Gradle & Maven dependencies to speed up subsequent builds.
+      # Step 3: Enhanced caching strategy
       - name: Cache Gradle & Maven Dependencies
         uses: actions/cache@v4
         with:
@@ -37,36 +45,59 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             ~/.m2/repository
+            ~/.android/build-cache
+            ~/.android/cache
           key: ${{ runner.os }}-gradle-maven-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-maven-
+            ${{ runner.os }}-gradle-
 
-      # Step 4: Set up Android SDK, Build Tools, and NDK.
+      # Step 4: Optimized Android SDK setup
       - name: Set up Android SDK, Build Tools, and NDK
         uses: android-actions/setup-android@v3
         with:
-          sdk-version: 'latest'
-          build-tools: 'latest'
-          ndk-version: 'latest'
+          sdk-version: '34'  # Use specific version instead of 'latest'
+          build-tools: '34.0.0'  # Use specific version
+          ndk-version: '25.2.9519653'  # Use specific version
+          cache: true  # Enable SDK caching
+          api-level: 34  # Specify API level
+          target-api-level: 34  # Specify target API level
 
-      # Step 5: Publish the Custom Gradle Plugin to GitHub Packages.
+      # Step 5: Optimized plugin publishing
       - name: Publish Voyager Plugin
         env:
           GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew :voyager-plugin:publishToMavenLocal --build-cache --no-daemon
+          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+        run: |
+          ./gradlew :voyager-plugin:publishToMavenLocal \
+            --build-cache \
+            --no-daemon \
+            --parallel \
+            --configure-on-demand \
+            --max-workers 4
 
-      # Step 6: Build the main Android project (app) using the published plugin.
+      # Step 6: Optimized project build
       - name: Build Android Project
         env:
           GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew :app:assembleDebug --parallel --build-cache --configure-on-demand --no-daemon
+          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+        run: |
+          ./gradlew :app:assembleDebug \
+            --parallel \
+            --build-cache \
+            --configure-on-demand \
+            --no-daemon \
+            --max-workers 4 \
+            --scan
 
-      # Step 7: Upload the built APKs as artifacts with a retention period of 10 days.
+      # Step 7: Optimized artifact upload
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: APK
           path: app/build/outputs/apk/
           retention-days: 10
+          compression-level: 9  # Maximum compression
+          overwrite: true  # Overwrite existing artifacts
