Refactor: Simplify Voyager plugin publication and update build process
- Removed environment variables related to memory settings from the publish step in `android.yml`, relying on default Gradle settings.
- Simplified the Gradle command for publishing the Voyager plugin, removing unnecessary parameters like `--parallel`, `--configure-on-demand`, and `--max-workers`.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -68,14 +68,7 @@ jobs:
         env:
           GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
-        run: |
-          ./gradlew :voyager-plugin:publishToMavenLocal \
-            --build-cache \
-            --no-daemon \
-            --parallel \
-            --configure-on-demand \
-            --max-workers 4
+        run: ./gradlew :voyager-plugin:publishToMavenLocal --build-cache --no-daemon
 
       # Step 6: Optimized project build
       - name: Build Android Project
