--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -68,7 +68,14 @@ jobs:
         env:
           GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew :voyager-plugin:publishToMavenLocal --build-cache --no-daemon
+          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+        run: |
+          ./gradlew :voyager-plugin:publishToMavenLocal \
+            --build-cache \
+            --no-daemon \
+            --parallel \
+            --configure-on-demand \
+            --max-workers 4
 
       # Step 6: Optimized project build
       - name: Build Android Project
