--- a/Voyager/src/main/cpp/CMakeLists.txt
+++ b/Voyager/src/main/cpp/CMakeLists.txt
@@ -7,6 +7,8 @@ project(xmlParser LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_WARN_DEPRECATED OFF)
+set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1)
 
 add_library(xmlParser
         SHARED
