--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ gson = "2.12.1"
 ksp = "2.1.20-1.0.32"
 slidingPaneLayout = "1.2.0"
 glide = "4.16.0"
-room = "2.7.1"
+room = "2.7.2"
 koin = "4.1.0-Beta5"
 jetbrainsKotlinJvm = "2.1.10"
 kotlinx-serialization = "1.8.0"
@@ -26,6 +26,9 @@ plugin-serliziation = "2.1.0"
 android-build = "8.9.3"
 kotlin-poet = "2.1.0"
 flexbox = "3.0.0"
+compose  = "1.8.3"
+compose-material3 = "1.3.2"
+palette = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +61,11 @@ android-build-tools = { group = "com.android.tools.build", name = "gradle", vers
 kotlin-poet = { group = "com.squareup", name = "kotlinpoet", version.ref = "kotlin-poet" }
 flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref = "flexbox" }
 coroutines-rx3 = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-rx3", version.ref = "coroutines-rx3" }
+compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material3" }
+compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
+androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -66,3 +74,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "plugin-serliziation" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
